fix: align to top
FIXES https://github.com/keboola/kbc-ui/issues/1344

--- a/src/indigo/less/components.less
+++ b/src/indigo/less/components.less
@@ -3,7 +3,7 @@
         > .td {
             width: 33.3%;
             text-align: center;
-            vertical-align: bottom;
+            vertical-align: top;
             border-right: solid 1px @table-border-color;
             &:nth-child(3):nth-last-child(1) {
                 border-right: none;
